2008-05-23  Bill Wohler  <wohler@newt.com>

	* mh-e.el: (mh-invisible-header-fields-internal): Remove
	DKIM-Signature as it is covered by DKIM-. Fully qualify X-EID.

2008-05-19  Sergey Poznyakoff <gray@gnu.org.ua>

	* mh-mime.el (mh-mh-to-mime, mh-mh-to-mime-undo): Preserve modes
	when converting to or from MIME (closes SF #1966722).

2008-05-19  Bill Wohler  <wohler@newt.com>

	* mh-e.el (mh-invisible-header-fields-internal): Sort list in a
	case-insensitive way and add comment about it. Add many header
	fields (closes SF #1916032).

2008-05-19  Xavier Maillard <xma@gnu.org>  (tiny change)

	* mh-utils.el (mh-find-path): Don't throw error if MH environment
	variable is being used (closes SF #1946861).

2008-05-19  Nick Dokos <nicholas.dokos@hp.com>  (tiny change)

	* mh-search.el (mh-mairix-regexp-builder): Add additional items to
	search string to support org-mode (closes SF #1965704).

2008-03-18  Bill Wohler  <wohler@newt.com>

	* mh-e.el (mh-invisible-header-fields-internal): Add Accreditor,
	Seal-Send-Time. 
	(mh-invisible-header-fields, mh-invisible-header-fields-default):
	Update URL to bug report for users to report ignored fields.

2008-03-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mh-xface.el (mh-uncompface, mh-picon-file-contents):
	Use set-buffer-multibyte...
	(mh-face-display-function, mh-x-image-display): ...rather than bind
	default-enable-multibyte-characters.

2008-02-24  Bill Wohler  <wohler@newt.com>

	* mh-comp.el (mh-send-letter): Call split-string on mh-send-args
	when sending synchronously too.

2008-02-19  Bill Wohler  <wohler@newt.com>

	* mh-comp.el (mh-annotate-msg):
	* mh-e.el (mh-invisible-header-fields-internal): Remove trailing
	whitespace.

2008-01-30  Bill Wohler  <wohler@newt.com>

	* mh-mime.el (mh-mml-to-mime): Don't look up sender if From
	absent. Fixes "Wrong type argument: stringp, nil" error.

2007-12-02  Glenn Morris  <rgm@gnu.org>

	* mh-mime.el (mail-strip-quoted-names): Autoload it.
